[gd_scene load_steps=14 format=3 uid="uid://dv1ikq1wucki2"]

[ext_resource type="Script" uid="uid://bjpy5d3haavp3" path="res://scripts/ghost.gd" id="1_fj7t6"]
[ext_resource type="Texture2D" uid="uid://cv6lnsf12w2gu" path="res://assets/industrial.v2.png" id="1_tykv7"]
[ext_resource type="PackedScene" uid="uid://g51wsrys1hsp" path="res://scenes/killzone.tscn" id="2_l5lq6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l5lq6"]
atlas = ExtResource("1_tykv7")
region = Rect2(0, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbnym"]
atlas = ExtResource("1_tykv7")
region = Rect2(16, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_veat2"]
atlas = ExtResource("1_tykv7")
region = Rect2(32, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mfnq"]
atlas = ExtResource("1_tykv7")
region = Rect2(48, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv6vd"]
atlas = ExtResource("1_tykv7")
region = Rect2(64, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv5gc"]
atlas = ExtResource("1_tykv7")
region = Rect2(80, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj1r3"]
atlas = ExtResource("1_tykv7")
region = Rect2(96, 416, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l5lq6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5lq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbnym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veat2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mfnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv6vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv5gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj1r3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_veat2"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbnym"]
size = Vector2(14, 13)

[node name="ghost" type="CharacterBody2D"]
script = ExtResource("1_fj7t6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_l5lq6")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_veat2")

[node name="Killzone" parent="." instance=ExtResource("2_l5lq6")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_bbnym")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-7, 0)

[node name="RayCastBottom" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
